# hausa-customer-service

./: .gitignore  README.md
api/: main.py  pyproject.toml
frontend/: index.html  styles.css
